@@ -20,6 +20,7 @@ version <next>:
 - sofalizer filter switched to libmysofa
 - Gremlin Digital Video demuxer and decoder
 - headphone audio filter
+- superequalizer audio filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
